syntax = "proto3";

package pb;

option go_package = "github.com/travor-backend/pb";

message Pagination {
  uint32 page = 1;
  uint32 page_size = 2;
}